# cursor-_test

./: README.md  index.html  script.js  style.css
android-voiceime/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-voiceime/app/: build.gradle.kts  proguard-rules.pro
android-voiceime/app/src/main/: AndroidManifest.xml
android-voiceime/app/src/main/java/com/example/voiceime/: PermissionsActivity.kt  SpeechController.kt  VoiceKeyboardService.kt
android-voiceime/app/src/main/res/layout/: keyboard_view.xml
android-voiceime/app/src/main/res/xml/: method.xml
app/: index.html  package-lock.json  vite.config.ts
app/.github/workflows/: ci.yml  pages.yml
app/public/: manifest.webmanifest  sw.js
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/lib/: invoke.ts
