[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Plugins
 tauri-plugin-store = "2"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-single-instance = "2"
# Stronghold/keychain may not be available in all targets; keep optional
# tauri-plugin-stronghold = { version = "2", optional = true }
# tauri-plugin-keychain = { version = "2", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
once_cell = "1"
regex = "1"
urlencoding = "2"
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
# Async runtime
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Keyboard / input simulation for paste
 enigo = { version = "0.2", features = ["wayland"] }
# Base64 for audio
 base64 = "0.22"
 keyring = "2.1"
 zeroize = "1.8"

[features]
default = []
# with-stronghold = ["tauri-plugin-stronghold"]
# with-keychain = ["tauri-plugin-keychain"]

